Chapter 3 — Listing 3.1: FragileInheritance.java Demonstrates: fragile base class problem with classical inheritance